<resources>
    <string name="app_name">L04-Reservation</string>
    <string name="name">Name:</string>
    <string name="reservation">Reservation</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="date_and_time">Please choose Date and Time</string>
    <string name="table_in_smoking_area">Table in Smoking Area?</string>
    <string name="confirm_reservation">Confirm Reservation</string>
    <string name="mobile_no">Mobile No. </string>
    <string name="no_of_pax">No. of pax:</string>
    <string name="number_of_people">Enter number of people</string>
    <string name="mobile_number">Enter your mobile number</string>
    <string name="reset">Reset</string>
</resources>